# peopeople

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: Python Backend.yml
alembic/: env.py
alembic/versions/: 490109b05bb1_.py  4f87e3d2609d_.py  5686f388fe77_.py
backend/: config.py  models.py  run_api.py  run_web.py
backend/api/: models.py
backend/api/message/: router.py  schemas.py
backend/db/: __init__.py  session.py
backend/db/tables/: __init__.py  message.py  user.py
backend/http_connector/: __init__.py  api.py  base.py
backend/settings/: messanger.py
backend/tests/: conftest.py
backend/tests/api/: test_message.py
backend/web/: app.py  manager.py
backend/web/chat/: router.py  schemas.py
backend/web/connector_api/: connector.py
backend/web/message/: router.py
backend/web/websocket_manager/: __init__.py  auth.py  events.py  exceptions.py  manager.py  statements.py  validators.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: ChatForm.vue  ChatList.vue  ChatMessage.vue
frontend/src/directives/: VScrollDown.js  index.js
src/: config.py  models.py  run_api.py  run_client.py  run_server.py  test.py
src/api/: app.py
src/api/chat_members/: router.py
src/api/chats/: router.py
src/api/friends/: router.py
src/api/message/: router.py
src/api/messages/: router.py  schemas.py
src/api/users/: router.py
src/client/: app.py
src/db/: session.py
src/server/: app.py
tests/: conftest.py  test_db.py
(+28 files in other folders)
